Proofread: 16-Evaluations / 07-LangSmith-Custom-LLM-Evaluation

--- a/16-Evaluations/07-LangSmith-Custom-LLM-Evaluation.ipynb
+++ b/16-Evaluations/07-LangSmith-Custom-LLM-Evaluation.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "2. **Easy Integration**:\n",
     "   - Works with LangChain's RAG systems\n",
-    "   - Compatible with LangSmith for tracking\n",
+    "   - Compatible with LangSmith for evaluation tracking\n",
     "\n",
     "3. **Evaluation Methods**:\n",
     "   - Simple metric-based evaluation\n",
@@ -149,7 +149,7 @@
    "source": [
     "## RAG System Setup\n",
     "\n",
-    "We'll build a basic **RAG** (Retrieval-Augmented Generation) system to test **Custom Evaluators**. This implementation creates a question-answering system based on PDF documents, which will serve as our foundation for evaluation purposes.\n",
+    "We will build a basic **RAG** (Retrieval-Augmented Generation) system to test **Custom Evaluators**. This implementation creates a question-answering system based on PDF documents, which will serve as our foundation for evaluation purposes.\n",
     "\n",
     "This **RAG** system will be used to evaluate answer quality and accuracy through **Custom Evaluators** in later sections.\n",
     "\n",
@@ -246,27 +246,71 @@
     "\n",
     "**Custom Evaluators** can return results in the following formats:\n",
     "\n",
-    "1. **Dictionary Format** (Recommended)\n",
-    "   ```python\n",
-    "   {\"key\": \"metric_name\", \"score\": value}\n",
-    "   ```\n",
-    "\n",
+    "1. **Dictionary Format** (Recommended)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"key\": \"metric_name\", \"score\": value}'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"{\\\"key\\\": \\\"metric_name\\\", \\\"score\\\": value}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. **Basic Types** (Python)\n",
     "   - `int`, `float`, `bool`: Continuous numerical metrics\n",
     "   - `str`: Categorical metrics\n",
     "   \n",
-    "3. **Multiple Metrics**\n",
-    "   ```python\n",
-    "   [{\"key\": \"metric1\", \"score\": value1}, {\"key\": \"metric2\", \"score\": value2}]\n",
-    "   ```\n",
-    "\n",
+    "3. **Multiple Metrics**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[{\"key\": \"metric1\", \"score\": value1}, {\"key\": \"metric2\", \"score\": value2}]'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"[{\\\"key\\\": \\\"metric1\\\", \\\"score\\\": value1}, {\\\"key\\\": \\\"metric2\\\", \\\"score\\\": value2}]\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Random Score Evaluator Example\n",
     "\n",
     "Now, let's create a simple **Custom Evaluator** example. This evaluator will return a random score between 1 and 10, regardless of the answer content.\n",
     "\n",
     "**Random Score Evaluator Implementation**\n",
     "- Takes `Run` and `Example` objects as input parameters\n",
-    "- Returns a dictionary in the format: **{\"key\": \"score_name\", \"score\": score}**\n",
+    "- Returns a dictionary in the format: `{\\\"key\\\": \\\"random_score\\\", \\\"score\\\": score}`\n",
     "\n",
     "Here's the basic implementation of a random score evaluator:"
    ]
@@ -537,7 +581,7 @@
    "source": [
     "Let's run our evaluation using LangSmith's evaluate function. We'll use our custom evaluator to assess the RAG system's performance across our test dataset.\n",
     "\n",
-    "We'll use the \"teddynote/context-answer-evaluator\" prompt template from LangChain Hub, which provides a structured evaluation framework for RAG systems.\n",
+    "We'll use the `teddynote/context-answer-evaluator` prompt template from LangChain Hub, which provides a structured evaluation framework for RAG systems.\n",
     "\n",
     "The evaluator uses the following criteria:\n",
     "- **Accuracy (0-10)**: How well the answer aligns with the context\n",
