--- a/17-LangGraph/02-Structures/01-LangGraph-Building-Graphs.ipynb
+++ b/17-LangGraph/02-Structures/01-LangGraph-Building-Graphs.ipynb
@@ -157,7 +157,7 @@
       "metadata": {},
       "source": [
         "## Steps for Defining a Graph  \n",
-        "To define a graph with `LangGraph`, you need to define `State`, `Node`, and `Graph`, and then compile them.  \n",
+        "To define a graph with `LangGraph`, you need to define **State** , **Node** , and **Graph** , and then compile them.  \n",
         "\n",
         "If necessary, you can flexibly adjust the graph flow by adding conditional edges to nodes using `add_conditional_edges()`."
       ]
@@ -169,7 +169,7 @@
       "source": [
         "### Define State  \n",
         "\n",
-        "`State` defines the shared state between the nodes in the graph.  \n",
+        "**State** defines the shared state between the nodes in the graph.  \n",
         "\n",
         "It uses the `TypedDict` format and adds metadata to type hints using `Annotated` to provide detailed information."
       ]
@@ -203,7 +203,7 @@
         "### Define Node  \n",
         "Define the nodes that process each step.  \n",
         "\n",
-        "These are usually implemented as Python functions, with `State` as both input and output."
+        "These are usually implemented as Python functions, with **State** as both input and output."
       ]
     },
     {
@@ -304,9 +304,9 @@
       "metadata": {},
       "source": [
         "### Define Graph  \n",
-        "Connect nodes with `Edge`.  \n",
+        "Connect nodes with **Edge** .  \n",
         "\n",
-        "Using conditional edges, you can determine the next `Node` to execute based on the current `State`."
+        "Using conditional edges, you can determine the next **Node** to execute based on the current **State** . "
       ]
     },
     {
@@ -386,7 +386,7 @@
         "\n",
         "- A conditional edge is added to the `Aggregation_results` node.\n",
         "- The `GPT_relevance_check` node checks the relevance of the output from the `GPT_request` node.  \n",
-        "- Based on the result of the relevance check, the `Aggregation_results` node decides whether to `re_search` or `exit` using the `State` information."
+        "- Based on the result of the relevance check, the `Aggregation_results` node decides whether to `re_search` or `exit` using the **State** information."
       ]
     },
     {
