docs: fix typos and grammar

--- a/13-LangChain-Expression-Language/05-RunnableParallel.ipynb
+++ b/13-LangChain-Expression-Language/05-RunnableParallel.ipynb
@@ -15,7 +15,7 @@
         "\n",
         "## Overview\n",
         "\n",
-        "This tutorial covers `RunnableParallel` , a core component of the LangChain Expression Language(LCEL).\n",
+        "This tutorial covers `RunnableParallel`, a core component of the LangChain Expression Language(LCEL).\n",
         "\n",
         "`RunnableParallel` is designed to execute multiple Runnable objects in parallel and return a mapping of their outputs.\n",
         "\n",
@@ -32,7 +32,7 @@
         "\n",
         "### References\n",
         "\n",
-        "- [RunalbleParallel](https://python.langchain.com/api_reference/core/runnables/langchain_core.runnables.base.RunnableParallel.html)\n",
+        "- [RunnableParallel](https://python.langchain.com/api_reference/core/runnables/langchain_core.runnables.base.RunnableParallel.html)\n",
         "- [itemgetter](https://docs.python.org/3/library/operator.html#operator.itemgetter)\n",
         "- [FAISS](https://python.langchain.com/docs/integrations/vectorstores/faiss/#setup)\n",
         "----"
@@ -49,7 +49,7 @@
         "\n",
         "**[Note]**\n",
         "- `langchain-opentutorial` is a package that provides a set of easy-to-use environment setup, useful functions and utilities for tutorials. \n",
-        "- You can checkout the [`langchain-opentutorial`](https://github.com/LangChain-OpenTutorial/langchain-opentutorial-pypi) for more details."
+        "- You can check out the [`langchain-opentutorial`](https://github.com/LangChain-OpenTutorial/langchain-opentutorial-pypi) for more details."
       ]
     },
     {
@@ -158,7 +158,7 @@
         "\n",
         "`RunnableParallel` is useful for manipulating the output of one Runnable within a sequence to match the input format requirements of the next Runnable.\n",
         "\n",
-        "Let's suppose a prompt expects input as a map with keys ( `context` , `question` ).\n",
+        "Let's suppose a prompt expects input as a map with keys (`context` , `question`).\n",
         "\n",
         "The user input is simply the question, providing content. Therefore, you'll need to use a retriever to get the context and pass the user input under the `question` key."
       ]
@@ -425,7 +425,7 @@
         "\n",
         "`RunnableParallel` is particularly useful for running independent processes in parallel because each Runnable in the map is executed concurrently.\n",
         "\n",
-        "For example, you can see that `area_chain`, `capital_chain`, and `map_chain` take the almost same execution time, even though `map_chain` runs the other two chains in parallel."
+        "For example, you can see that `area_chain`, `capital_chain`, and `map_chain` take almost the same execution time, even though `map_chain` runs the other two chains in parallel."
       ]
     },
     {
