[N-3] 13-LangChain-Expression-Language / 10-Binding [Title] Translation [Version] proofread fix [Language] ENG

--- a/13-LangChain-Expression-Language/10-Binding.ipynb
+++ b/13-LangChain-Expression-Language/10-Binding.ipynb
@@ -23,7 +23,7 @@
     "### Table of Contents\n",
     "\n",
     "- [Overview](#overview)\n",
-    "- [Environement Setup](#environment-setup)\n",
+    "- [Environment Setup](#environment-setup)\n",
     "- [Runtime Arguments Binding](#runtime-arguments-binding)\n",
     "- [Connecting OpenAI Functions](#connecting-openai-functions)\n",
     "- [Connecting OpenAI Tools](#connecting-openai-tools)\n",
@@ -48,8 +48,8 @@
     "Set up the environment. You may refer to [Environment Setup](https://wikidocs.net/257836) for more details.\n",
     "\n",
     "**[Note]**\n",
-    "- `langchain-opentutorial` is a package that provides a set of easy-to-use environment setup, useful functions and utilities for tutorials. \n",
-    "- You can checkout the [ `langchain-opentutorial` ](https://github.com/LangChain-OpenTutorial/langchain-opentutorial-pypi) for more details."
+    "- `langchain-opentutorial` is a package that provides a set of easy-to-use environment setup tools, useful functions and utilities for tutorials. \n",
+    "- You can check out the [ `langchain-opentutorial` ](https://github.com/LangChain-OpenTutorial/langchain-opentutorial-pypi) for more details."
    ]
   },
   {
@@ -175,13 +175,13 @@
    "source": [
     "## Runtime Arguments Binding\n",
     "\n",
-    "This section explains how to use `Runnable.bind()` to pass constant arguments to a `Runnable` within a sequence, especially when those arguments aren't part of the previous Runnable's output or use input.\n",
+    "This section explains how to use `Runnable.bind()` to pass constant arguments to a `Runnable` within a sequence, especially when those arguments aren't part of the previous Runnable's output or user input.\n",
     "\n",
     "**Passing variables to prompts:**\n",
     "\n",
     "1. Use `RunnablePassthrough` to pass the `{equation_statement}` variable to the prompt.\n",
     "2. Use `StrOutputParser` to parse the model's output into a string, creating a `runnable` object.\n",
-    "3. Call the `runnable.invoke()` method to pass the equation statement (e.g., \\\"x raised to the third plus seven equals 12\\\") get the result."
+    "3. Call the `runnable.invoke()` method to pass the equation statement (e.g., \\\"x raised to the third plus seven equals 12\\\") and get the result."
    ]
   },
   {
@@ -250,7 +250,7 @@
    "source": [
     "**Using bind() method with stop words**\n",
     "\n",
-    "For controlling the end of the model's output using a specific stop word, you can use `model.bind()` to instruct the model to halt its generation upon encountering the stop token like `SOLUTION`."
+    "For controlling the end of the model's output using a specific stop word, you can use `model.bind()` to instruct the model to halt its generation upon encountering the stop token such as `SOLUTION`."
    ]
   },
   {
@@ -331,7 +331,7 @@
    "id": "b3294828",
    "metadata": {},
    "source": [
-    "**Binding a solver function.**\n",
+    "**Binding the solver function.**\n",
     "\n",
     "We can then use the `bind()` method to associate a function call (like `solver`) with the language model."
    ]
@@ -390,7 +390,7 @@
     "\n",
     "This section explains how to connect and use OpenAI tools within your LangChain applications.\n",
     "The `tools` object simplifies using various OpenAI features.\n",
-    "For example, calling the `tool.run` method with a natural language query allows the model to utilize the spcified tool to generate a response."
+    "For example, calling the `tool.run` method with a natural language query allows the model to utilize the specified tool to generate a response."
    ]
   },
   {
@@ -431,7 +431,7 @@
     "**Binding tools and invoking the model:**\n",
     "\n",
     "1. Use `bind()` to associate `tools` with the language model.\n",
-    "2. Call the `invoke()` method on the bound model, providing a natural language question as input.\n"
+    "2. Call the `invoke()` method on the bound model, by providing a natural language question as input.\n"
    ]
   },
   {
