--- a/17-LangGraph/02-Structures/04-LangGraph-Add-Web-Search.ipynb
+++ b/17-LangGraph/02-Structures/04-LangGraph-Add-Web-Search.ipynb
@@ -34,7 +34,7 @@
     "- [Overview](#overview)\n",
     "- [Environement Setup](#environment-setup)\n",
     "- [Creating a Basic PDF-Based Retrieval Chain](#creating-a-basic-pdf-based-retrieval-chain)\n",
-    "- [State Definition](#state-definition)\n",
+    "- [GraphState](#GraphState)\n",
     "- [Node Definition](#node-definition)\n",
     "- [Adding Search Node](#adding-search-node)\n",
     "- [Edges](#edges)\n",
@@ -163,8 +163,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## State Definition\n",
-    "`State` : Defines the shared state between nodes in a Graph. \n",
+    "## GraphState\n",
+    "`GraphState` : Defines the shared state between nodes in a Langgraph. \n",
     "\n",
     "Typically uses the `TypedDict` format."
    ]
@@ -200,11 +200,11 @@
    "source": [
     "## Node Definition\n",
     "\n",
-    "- `Nodes` : These are nodes that process each step. They are typically implemented as Python functions. Both input and output are State values.\n",
+    "- `Nodes` : These are **nodes** that process each step. They are typically implemented as Python functions. Both input and output are `state` values.\n",
     "\n",
     "**Note**\n",
     "\n",
-    "- Receives a `State` as input, performs the defined logic, and returns an updated `State`."
+    "- Receives a `state` as input, performs the defined logic, and returns an updated `State`."
    ]
   },
   {
@@ -364,7 +364,7 @@
    "source": [
     "## Edges\n",
     "\n",
-    "- `Edges` : Python functions that determine the next `Node` to execute based on the current `State` .\n",
+    "- **`Edges`** : Python functions that determine the next `Node` to execute based on the current `state` .\n",
     "\n",
     "There are various types such as regular edges and conditional edges."
    ]
