--- a/09-VectorStore/08-PGVector.ipynb
+++ b/09-VectorStore/08-PGVector.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,6 +74,9 @@
     "        \"langchain_core\",\n",
     "        \"langchain_postgres\",\n",
     "        \"langchain_openai\",\n",
+    "        \"pgvector\",\n",
+    "        \"psycopg\",\n",
+    "        \"psycopg-binary\",\n",
     "    ],\n",
     "    verbose=False,\n",
     "    upgrade=False,\n",
@@ -259,12 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create new collection\n",
-    "col_manager = index_manager.create_index(collection_name='langchain_opentutorial', embedding=embeddings)"
+    "col_manager = index_manager.create_index(\n",
+    "    collection_name=\"langchain_opentutorial\", embedding=embeddings\n",
+    ")"
    ]
   },
   {
@@ -308,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -321,14 +326,16 @@
    ],
    "source": [
     "# delete collection\n",
-    "index_manager.delete_index('langchain_opentutorial')\n",
+    "index_manager.delete_index(\"langchain_opentutorial\")\n",
     "\n",
     "# check collections\n",
     "indexes = index_manager.list_indexes()\n",
     "print(indexes)\n",
     "\n",
     "# Create again\n",
-    "col_manager_tmp1 = index_manager.create_index(collection_name='langchain_opentutorial', embedding=embeddings)"
+    "col_manager_tmp1 = index_manager.create_index(\n",
+    "    collection_name=\"langchain_opentutorial\", embedding=embeddings\n",
+    ")"
    ]
   },
   {
@@ -343,12 +350,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get collection\n",
-    "col_manager_tmp2 = index_manager.get_index(embedding=embeddings, collection_name='langchain_opentutorial')"
+    "col_manager_tmp2 = index_manager.get_index(\n",
+    "    embedding=embeddings, collection_name=\"langchain_opentutorial\"\n",
+    ")"
    ]
   },
   {
@@ -405,14 +414,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils.pgvector_interface import pgVectorDocumentManager\n",
     "\n",
     "# Get document manager\n",
-    "col_manager = pgVectorDocumentManager(embedding=embeddings, connection_info=conn_str, collection_name='langchain_opentutorial')"
+    "col_manager = pgVectorDocumentManager(\n",
+    "    embedding=embeddings,\n",
+    "    connection_info=conn_str,\n",
+    "    collection_name=\"langchain_opentutorial\",\n",
+    ")"
    ]
   },
   {
@@ -865,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +898,7 @@
     "result_with_filter = col_manager.search(\n",
     "    \"Does the little prince have a friend?\",\n",
     "    filter={\"page\": {\"$between\": [100, 110]}},\n",
-    "    k=5\n",
+    "    k=5,\n",
     ")\n",
     "\n",
     "for doc in result_with_filter:\n",
