--- a/09-VectorStore/08-PGVector.ipynb
+++ b/09-VectorStore/08-PGVector.ipynb
@@ -178,7 +178,13 @@
     "docker run --name pgvector-container -e POSTGRES_USER=langchain -e POSTGRES_PASSWORD=langchain -e POSTGRES_DB=langchain -p 6024:5432 -d pgvector/pgvector:pg16\n",
     "```\n",
     "\n",
-    "For more detailed instructions, please refer to [the official documentation](https://github.com/pgvector/pgvector) "
+    "For more detailed instructions, please refer to [the official documentation](https://github.com/pgvector/pgvector) \n",
+    "\n",
+    "** [ NOTE ] **\n",
+    "If you want to maintain the stored data even after container being deleted, you must mount volume like below:\n",
+    "```bash\n",
+    "docker run --name pgvector-container -v {/mount/path}:/var/lib/postgresql/data -e POSTGRES_USER=langchain -e POSTGRES_PASSWORD=langchain -e POSTGRES_DB=langchain -p 6024:5432 -d pgvector/pgvector:pg16\n",
+    "```"
    ]
   },
   {
