Asset Change / Add description

--- a/09-VectorStore/08-PGVector.ipynb
+++ b/09-VectorStore/08-PGVector.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,8 +228,14 @@
     "    \n",
     "So, when you create a new collection and insert data to the collection, the data will be stored in **langchain_pg_embedding** table.\n",
     "\n",
+    "As you can see below, the uuid column in langchain_pg_collection table matched with collection_id column in langchain_pg_embedding table.\n",
+    "\n",
     "![pgVector Entity Relation](./assets/08-pgvector-entityRelation.png)\n",
+    "\n",
+    "\n",
     "![pgVector Collection](./assets/08-pgvector-collection.png)\n",
+    "\n",
+    "\n",
     "![pgVector Data](./assets/08-pgvector-data.png)"
    ]
   },
@@ -914,9 +920,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cp311",
+   "display_name": "testbed",
    "language": "python",
-   "name": "cp311"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
