[E-4] 05-Memory / 06-ConversationSummaryMemory proofread #827 2차 검수사항 반영 백틱처리 변경  ` -> ```

--- a/05-Memory/06-ConversationSummaryMemory.ipynb
+++ b/05-Memory/06-ConversationSummaryMemory.ipynb
@@ -15,11 +15,11 @@
         "\n",
         "## Overview\n",
         "\n",
-        "This tutorial covers how to summarize and manage conversation history using `LangChain`.  \n",
+        "This tutorial covers how to summarize and manage conversation history using ```LangChain```.  \n",
         "\n",
-        "`ConversationSummaryMemory` optimizes memory usage by summarizing conversation content, allowing efficient management of long conversation histories.  \n",
+        "```ConversationSummaryMemory``` optimizes memory usage by summarizing conversation content, allowing efficient management of long conversation histories.  \n",
         "\n",
-        "In this tutorial, we will demonstrate how to implement conversation summarization functionality using LangChain's `ConversationSummaryMemory`.\n",
+        "In this tutorial, we will demonstrate how to implement conversation summarization functionality using LangChain's ```ConversationSummaryMemory```.\n",
         "\n",
         "### Table of Contents\n",
         "\n",
@@ -44,8 +44,8 @@
         "Set up the environment. You may refer to [Environment Setup](https://wikidocs.net/257836) for more details.\n",
         "\n",
         "**[Note]**\n",
-        "- `langchain-opentutorial` is a package that provides a set of easy-to-use environment setup, useful functions and utilities for tutorials. \n",
-        "- You can checkout the [`langchain-opentutorial`](https://github.com/LangChain-OpenTutorial/langchain-opentutorial-pypi) for more details."
+        "- ```langchain-opentutorial``` is a package that provides a set of easy-to-use environment setup, useful functions and utilities for tutorials. \n",
+        "- You can checkout the [```langchain-opentutorial```](https://github.com/LangChain-OpenTutorial/langchain-opentutorial-pypi) for more details."
       ]
     },
     {
@@ -121,9 +121,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "You can alternatively set `OPENAI_API_KEY` in `.env` file and load it. \n",
+        "You can alternatively set ```OPENAI_API_KEY``` in ```.env``` file and load it. \n",
         "\n",
-        "[Note] This is not necessary if you've already set `OPENAI_API_KEY` in previous steps."
+        "[Note] This is not necessary if you've already set ```OPENAI_API_KEY``` in previous steps."
       ]
     },
     {
@@ -157,17 +157,17 @@
       "source": [
         "## Conversation Summary Memory\n",
         "\n",
-        "Let's now explore how to use a more complex type of memory: `ConversationSummaryMemory`.\n",
+        "Let's now explore how to use a more complex type of memory: ```ConversationSummaryMemory```.\n",
         "\n",
         "This type of memory generates **a summary of the conversation over time** , which can be useful for compressing conversational information as the conversation progresses.\n",
         "\n",
-        "`ConversationSummaryMemory` summarizes the conversation as it continues and **stores the current summary in memory** .\n",
+        "```ConversationSummaryMemory``` summarizes the conversation as it continues and **stores the current summary in memory** .\n",
         "\n",
         "This memory can then be used to insert the summarized conversation history into prompts or chains.\n",
         "\n",
         "It is particularly useful for longer conversations, where retaining the entire conversation history in the prompt would take up too many tokens.\n",
         "\n",
-        "Let's create a `ConversationSummaryMemory`."
+        "Let's create a ```ConversationSummaryMemory```."
       ]
     },
     {
@@ -287,7 +287,7 @@
       "source": [
         "## Conversation Summary Buffer Memory\n",
         "\n",
-        "`ConversationSummaryBufferMemory` combines two key ideas:\n",
+        "```ConversationSummaryBufferMemory``` combines two key ideas:\n",
         "\n",
         "It retains a buffer of the recent conversation history in memory while compiling older interactions into a summary without completely flushing them.\n",
         "\n",
