Add references, correting typos

--- a/09-VectorStore/08-PGVector.ipynb
+++ b/09-VectorStore/08-PGVector.ipynb
@@ -26,12 +26,15 @@
     "- [What is PGVector?](#what-is-pgvector)\n",
     "- [Initialization](#initialization)\n",
     "- [Manage vector store](#manage-vector-store)\n",
-    "- [Query vector store](#query-vector-store)\n",
+    "- [Similarity search](#similarity-search)\n",
     "\n",
     "### References\n",
     "\n",
     "- [langchain-postgres](https://github.com/langchain-ai/langchain-postgres/)\n",
     "- [pgvector](https://github.com/pgvector/pgvector)\n",
+    "- [Docker Desktop for Windows](https://docs.docker.com/desktop/setup/install/windows-install)\n",
+    "- [Docker Desktop for Mac](https://docs.docker.com/desktop/setup/install/mac-install/)\n",
+    "- [Install pgvector on Windows](https://dev.to/mehmetakar/install-pgvector-on-windows-6gl)\n",
     "----"
    ]
   },
@@ -60,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +75,6 @@
     "        \"langsmith\",\n",
     "        \"langchain\",\n",
     "        \"langchain_core\",\n",
-    "        \"langchain_postgres\",\n",
     "        \"langchain_openai\",\n",
     "        \"pgvector\",\n",
     "        \"psycopg\",\n",
@@ -172,7 +174,11 @@
    "source": [
     "### Set up PGVector\n",
     "\n",
-    "You can easily set up `PGVector` by running the following command that spins up a ```Docker``` container:\n",
+    "If you are using Windows and have installed postgresql for Windows, you are required to install **vector** extension for postgresql. The following may help [Install pgvector on Windows](https://dev.to/mehmetakar/install-pgvector-on-windows-6gl).\n",
+    "\n",
+    "But in this tutorial, we will use ```Docker``` container. If you are using Mac or Windows, check [Docker Desktop for Mac](https://docs.docker.com/desktop/setup/install/mac-install/) or [Docker Desktop for Windows](https://docs.docker.com/desktop/setup/install/windows-install).\n",
+    "\n",
+    "If you are using ```Docker``` desktop, you can easily set up `PGVector` by running the following command that spins up a ```Docker``` container:\n",
     "\n",
     "```bash\n",
     "docker run --name pgvector-container -e POSTGRES_USER=langchain -e POSTGRES_PASSWORD=langchain -e POSTGRES_DB=langchain -p 6024:5432 -d pgvector/pgvector:pg16\n",
@@ -181,10 +187,10 @@
     "For more detailed instructions, please refer to [the official documentation](https://github.com/pgvector/pgvector) \n",
     "\n",
     "** [ NOTE ] **\n",
-    "If you want to maintain the stored data even after container being deleted, you must mount volume like below:\n",
+    "* If you want to maintain the stored data even after container being deleted, you must mount volume like below:\n",
     "```bash\n",
     "docker run --name pgvector-container -v {/mount/path}:/var/lib/postgresql/data -e POSTGRES_USER=langchain -e POSTGRES_PASSWORD=langchain -e POSTGRES_DB=langchain -p 6024:5432 -d pgvector/pgvector:pg16\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -193,7 +199,7 @@
    "source": [
     "## Initialization\n",
     "\n",
-    "If you are successfully run the pgvector container, you can use ```pgVectorIndexManager``` from ```pgvector_interface``` in utils directory to handle collections.\n",
+    "If you are successfully running the pgvector container, you can use ```pgVectorIndexManager``` from ```pgvector_interface``` in utils directory to handle collections.\n",
     "\n",
     "To initialize ```pgVectorIndexManager``` you can pass full connection string or pass each parameter separately."
    ]
@@ -250,7 +256,7 @@
     "\n",
     "In this tutorial we will use ```text-embedding-3-large``` model of OpenAI.\n",
     "\n",
-    "If creation is successful, the method will return ```pgVectorDocumentManger``` class that can handle actual data.\n",
+    "If creation is successful, the method will return ```pgVectorDocumentManager``` class that can handle actual data.\n",
     "\n",
     "In this tutorial we will create an collection with name **langchain_opentutorial.**"
    ]
