fix : ## Make Online LLM-as-judge 밑에 설명 추가

--- a/16-Evaluations/14-LangSmith-Online-Evaluation.ipynb
+++ b/16-Evaluations/14-LangSmith-Online-Evaluation.ipynb
@@ -308,6 +308,8 @@
    "source": [
     "## Make Online LLM-as-judge\n",
     "\n",
+    "This guide explains how to set up and configure an online LLM evaluator using LangSmith. It walks you through creating evaluation rules, configuring API keys and prompts, and targeting specific outputs with tags for precise assessments.\n",
+    "\n",
     "\n",
     "### 1. click Add Rule\n",
     "Click “Add Rule” to create a new evaluation rule in your LangSmith project.\n",
