fix : 26번라인, 38번 라인 수정

--- a/01-Basic/07-LCEL-Interface.ipynb
+++ b/01-Basic/07-LCEL-Interface.ipynb
@@ -23,7 +23,7 @@
         "\n",
         "- [Overview](#overview)\n",
         "- [Environment Setup](#environment-setup)\n",
-        "- [LCEL Interface](#LCEL-Interface)\n",
+        "- [LCEL Runnable Protocol](#LCEL-Runnable-Protocol)\n",
         "- [stream: real-time output](#stream-real-time-output)\n",
         "- [Invoke](#invoke)\n",
         "- [batch: unit execution](#batch-unit-execution)\n",
@@ -35,7 +35,7 @@
         "\n",
         "### References\n",
         "\n",
-        "- [Lnagsmith DOC](https://docs.smith.langchain.com/)\n",
+        "- [Langsmith DOC](https://docs.smith.langchain.com/)\n",
         "---"
       ]
     },
@@ -157,7 +157,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## LCEL Interface\n",
+        "## LCEL Runnable Protocol\n",
         "\n",
         "---\n",
         "\n",
