Proofread: [N-1] 07-Agent / 15-CoT-basedSmartWebSearch - replace **fast_model** -> `fast_model` - replace **smart_model** -> `smart_model`

--- a/19-Cookbook/07-Agent/15-CoT-basedSmartWebSearch.ipynb
+++ b/19-Cookbook/07-Agent/15-CoT-basedSmartWebSearch.ipynb
@@ -607,7 +607,7 @@
    "source": [
     "### Think Node\n",
     "\n",
-    "We optionally refine and analyze the data gathered from the search. If the user’s query is more complex, we insert a *think step* that leverages **fast_model** (or **smart_model**) to process the intermediate data. This can produce more concise or better-structured information to pass on to the final respond phase.\n"
+    "We optionally refine and analyze the data gathered from the search. If the user’s query is more complex, we insert a *think step* that leverages `fast_model` (or `smart_model`) to process the intermediate data. This can produce more concise or better-structured information to pass on to the final respond phase."
    ]
   },
   {
